# user_registration

./: .env_sample  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  Dockerfile  README.md  asgi.py  docker-compose.yml  gunicorn_conf.py  pyproject.toml  test-Dockerfile  test-docker-compose.yml
docs/: http_collection.json
sql/: create_tables.sql
user_registration/: dependencies.py  utils.py
user_registration/api/api_v1/: api.py
user_registration/api/api_v1/endpoints/: users.py
user_registration/core/: config.py
user_registration/crud/: __init__.py  user.py  user_activation_code.py
user_registration/db/: db_connector.py
user_registration/models/: base.py  user.py  user_activation_code.py
user_registration/schemas/: __init__.py  user.py  user_activation_code.py
user_registration/static/email_templates/src/: activation_email.mjml
user_registration/tests/: conftest.py
user_registration/tests/integration/api/api_v1/: test_users.py
user_registration/tests/sql/: user_activation_code_fixture.sql  user_fixture.sql
user_registration/tests/unit/crud/: test_user.py  test_user_activation_code.py
