[tool.poetry]
name = "user_registration"
version = "0.1.0"
description = ""
authors = ["david galante <davidgalante77@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.104.1"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
email-validator = "^2.0.0"
uvicorn = "^0.23.2"
gunicorn = "^21.2.0"
python-dateutil = "^2.8.2"
boto3 = "^1.28.49"
ecs_logging = "^2.1.0"
psycopg2 = "^2.9.9"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
emails = "^0.6"
jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pylint = "^3.0.2"
pytest = "^7.0.0"
black = "^23.10.1"
ipdb = "^0.12.2"
pytest-cov = "^4.1.0"
sphinx = "^7.2.6"
sphinx_rtd_theme = "^0.4.3"
pytest-postgresql = "^5.0.0"
psycopg2-binary = "^2.9.9"
httpx = "^0.25.0"
pandas = "^2.0.0"
pytest-mock = "^3.12.0"


[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | build
    | dist
  )/
)
'''
[tool.isort]
line_length = 120
force_sort_within_sections = true
include_trailing_comma = true
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov --cov-report term --cov-report xml"

[tool.coverage.run]
branch = true
omit = ["tests"]

[tool.coverage.xml]
output = "reports/cover.xml"


[tool.semantic_release]
version_source = "commit"
commit_changes = true
version_variable = "pyproject.toml:version"
hvcs = "gitlab"
upload_to_pypi = false
upload_to_release = false
branch = "master"
[build-system]
requires = ["poetry>=1.6.1"]
build-backend = "poetry.core.masonry.api"